# Spice

./: CMakeLists.txt
src/linux/: open.c
